--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4",
-    "razorpay": "^2.9.4"
+    "razorpay": "^2.9.4",
+    "serverless-http": "^3.2.0"
   }
 }
